--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 Django==1.3
-psycopg2==2.4.2
+amqplib==1.0.2
+anyjson==0.3.1
+celery==2.3.3
+django-celery==2.3.3
+django-kombu==0.9.4
+django-picklefield==0.1.9
 gunicorn==0.12.2
+kombu==1.4.3
+psycopg2==2.4.2
+pyparsing==1.5.6
+python-dateutil==1.5
+wsgiref==0.1.2
